<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey">

    <ImageView
        android:id="@+id/profil"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@id/card1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        />

    <android.support.v7.widget.CardView

        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/card2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profil">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/colorGrey"
                app:layout_constraintBottom_toTopOf="@id/logoLocation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/apName2" />

            <ImageView
                android:id="@+id/logoPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_baseline_local_phone_24"
                app:layout_constraintBottom_toTopOf="@id/logoLanguage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logoLocation" />

            <ImageView
                android:id="@+id/logoLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_baseline_location_on_24"
                app:layout_constraintBottom_toTopOf="@id/logoPhone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line" />

            <ImageView
                android:id="@+id/logoLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_baseline_language_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logoPhone" />

            <TextView
                android:id="@+id/apPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/logoPhone"
                app:layout_constraintStart_toEndOf="@id/logoPhone"
                tools:text="Phone" />

            <TextView
                android:id="@+id/apAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/logoLocation"
                app:layout_constraintStart_toEndOf="@id/logoLocation"
                tools:text="Localisation" />

            <TextView
                android:id="@+id/apSite"
                android:layout_width="17dp"
                android:layout_height="15dp"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/logoLanguage"
                app:layout_constraintStart_toEndOf="@id/logoLanguage"
                tools:text="site" />

            <TextView
                android:id="@+id/apName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Name" />

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card1">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textCard2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="2dp"
                android:text="A propos de moi"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorGrey"
                app:layout_constraintBottom_toTopOf="@id/apDescription"
                app:layout_constraintTop_toBottomOf="@id/textCard2" />


            <TextView
                android:id="@+id/apDescription"
                android:layout_width="0dp"
                android:layout_height="0dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/textCard2"
                app:layout_constraintTop_toBottomOf="@id/view2"
                tools:text="description" />


        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/apButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:enabled="false"
        android:src="@drawable/ic_button"
        app:backgroundTint="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/card1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profil" />

    <ImageButton


        android:id="@+id/apBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:background="@null"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/apName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/colorWhite"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/profil"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Name" />


</android.support.constraint.ConstraintLayout>